--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,24 @@
 /Build
 /Assets/Ludiq
 /Assets/*.meta
+/Assets/Material/*.meta
+/Assets/Resources/*.meta
+/Assets/Resources/DropItem/*.meta
+/Assets/Resources/Images/*.meta
+/Assets/Resources/UI/*.meta
+/Assets/Scenes/SampleScene.unity.meta
+/Assets/Scripts/*.meta
+/Assets/Scripts/Entity/Player.cs.meta
+/Assets/Scripts/Entity/Boss.cs.meta
+/Assets/Scripts/Entity/Entity.cs.meta
+/Assets/Scripts/UI/UISysWin.cs.meta
+/Assets/Scripts/UI/WindowBase.cs.meta
+/Assets/Scripts/UI/PlayerInfoWin.cs.meta
+/Assets/Scripts/UI/TopMsgWin.cs.meta
+/Assets/Scripts/UI/UI.cs.meta
+/Assets/Scripts/UI/UIBagItem.cs.meta
+/Assets/Scripts/UI/UIBagWin.cs.meta
+/Assets/Scripts/UI/UISettingWin.cs.meta
+/Assets/Scripts/Util/TextEffect.cs.meta
+/Assets/Scripts/Util/Lib.cs.meta
+/Assets/Scripts/Util/Singleton.cs.meta
