--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@
 /Assets/Scripts/Util/TextEffect.cs.meta
 /Assets/Scripts/Util/Lib.cs.meta
 /Assets/Scripts/Util/Singleton.cs.meta
+/Assets/Shader/Perfect.shader.meta
+/Assets/StreamingAssets/property.json.meta
+/New Unity Project.sln
+/Assembly-CSharp.csproj
+/Assembly-CSharp-Editor.csproj
